--- a/src/index.html
+++ b/src/index.html
@@ -13,29 +13,12 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="./assets/vendors/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-  <!-- Font Awesome -->
-  <link href="./assets/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-  <!-- NProgress -->
-  <link href="./assets/vendors/nprogress/nprogress.css" rel="stylesheet">
 
-  <!-- Custom Theme Style -->
-  <link href="./assets/css/custom.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="nav-md">
   <app-root>loading ...</app-root>
    <!-- jQuery -->
-   <script src="./assets/vendors/jquery/dist/jquery.min.js"></script>
-   <!-- Bootstrap -->
-   <script src="./assets/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
-   <!-- FastClick -->
-   <script src="./assets/vendors/fastclick/lib/fastclick.js"></script>
-   <!-- NProgress -->
-   <script src="./assets/vendors/nprogress/nprogress.js"></script>
-
-   <!-- Custom Theme Scripts -->
-   <script src="./assets/js/custom.js"></script>
 </body>
 
 </html>
